Update SWAGGER definitions
